Tweaked php.ini

--- a/etc/php5/fpm/php.ini
+++ b/etc/php5/fpm/php.ini
@@ -14,6 +14,7 @@ post_max_size = 50M
 max_file_uploads = 20
 date.timezone = 'America/New_York'
 cgi.fix_pathinfo = 0
+
 # OPCACHE
 # sec between cache expire check
 opcache.revalidate_freq = 0
@@ -27,7 +28,8 @@ opcache.validate_timestamps = 0
 # max number of files that can be held in mem
 # should be > # of files in your codebase
 # `find . -type f -print | grep php | wc -l`
-opcache.max_accelerated_files = 7963
+# WordPress & Laravel ~3500
+opcache.max_accelerated_files = 3500
 
 # use opcache_get_status() to determine amt
 opcache.memory_consumption = 64
